Update name in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>Name</h1>
+            <h1>Gayatri Leela</h1>
             <form class="container" style="top: 0px;" id="entryForm">
                 <label>Enter food item:</label>
                 <input id="fooditems" type="text" pattern="[A-Za-z\s]+" placeholder="Enter 'all' items in ur plate" title="Only letters are allowed" required>
@@ -42,3 +42,4 @@
         <script src="foodTracker.js"></script>
     </body>
 </html>
+
