--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
             <div>
-                <h1>Gayatri Leela</h1>
+                <h1><!--User Name--></h1>
             </div>
             <form id="entryForm">
                 <label>Enter food item:</label>
