--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </div>
             <form id="entryForm">
                 <label>Enter food item:</label>
-                <input id="fooditems" type="text" pattern="[A-Za-z,-\s]+" placeholder="Enter 'all' items in ur plate" title="Only letters are allowed" required>
+                <input id="fooditems" type="text" pattern="^[A-Za-z]+([,\-\s][A-Za-z]+)*$" placeholder="Enter 'all' items in ur plate" title="Only letters are allowed" required>
                 <label>Enter Quantity:</label>
                 <input id="quantity" type="number" min="1" placeholder="1 for rice items else Quantity " required>
                 <label>Enter Category:</label>
@@ -25,6 +25,8 @@
                     <option value="Snacks">Snacks</option>
                     <option value="Dairy">Dairy</option>
                 </select>
+                <label>Enter Date:(optional)</label>
+                <input id="prevDate" type="date" value="2025-12-03" title="Use when you want to insert previous day">
                 <input type="submit" value="Add Entry">
             </form>
             <div>
