--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
                     <option value="Snacks">Snacks</option>
                     <option value="Dairy">Dairy</option>
                 </select>
-                <label>Enter Date:(optional)</label>
-                <input id="prevDate" type="date" value="2025-12-03" title="Use when you want to insert previous day">
+
+                <label>Press to enter previous day's details:</label>
+                <input id="pastDetails" type="checkbox" value="True">
+
+                <div id="Prev">
+                    <label>Choose Date:</label>
+                    <input id="Date" type="date">
+                    <label>Enter Time:(Optional)</label>
+                    <input id="Time" type="time">
+                </div>
                 <input type="submit" value="Add Entry">
             </form>
             <div>
